--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "next-theme": "^0.1.5",
     "next-themes": "^0.4.4",
     "node-fetch": "^3.3.2",
+    "papaparse": "^5.5.2",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
@@ -40,6 +41,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
+    "@types/papaparse": "^5.3.15",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.20",
