--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-progress": "^1.1.2",
     "@radix-ui/react-radio-group": "^1.2.3",
+    "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-toggle": "^1.1.2",
     "@supabase/supabase-js": "^2.48.1",
     "axios": "^1.7.9",
@@ -26,6 +27,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "framer-motion": "^12.4.1",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
     "next-theme": "^0.1.5",
