--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-router": "^7.1.5",
     "react-router-dom": "^7.1.5",
     "recharts": "^2.15.1",
+    "sharp": "^0.33.5",
     "tailwind-merge": "^3.0.1"
   },
   "devDependencies": {
