--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "financial_advisor",
   "version": "0.1.0",
@@ -24,6 +23,7 @@
     "chart.js": "^4.4.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.4",
     "cors": "^2.8.5",
     "dom": "^0.0.3",
     "dotenv": "^16.4.7",
