--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "papaparse": "^5.5.2",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
+    "react-day-picker": "^9.5.1",
     "react-dom": "^19.0.0",
     "react-router": "^7.1.5",
     "react-router-dom": "^7.1.5",
@@ -49,6 +50,7 @@
     "@types/node": "^20",
     "@types/papaparse": "^5.3.15",
     "@types/react": "^19",
+    "@types/react-day-picker": "^5.3.0",
     "@types/react-dom": "^19",
     "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.20",
